# app/Http/Controllers/Api/ReportsController.php
@@ -3,7 +3,6 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
-use GuzzleHttp\Psr7\Query;
 use Illuminate\Http\Request;
 use Carbon\Carbon;
 use Dompdf\Dompdf;
@@ -11,16 +10,38 @@ use App\Models\Call;
 use App\Models\Patient;
 use App\Models\Alert;
 use App\Models\Zone;
-use Illuminate\Support\Facades\View; // Import View
+use Illuminate\Support\Facades\View;
 
-
+/**
+ * @OA\Tag(
+ *   name="Reports",
+ *   description="Operaciones relacionadas con la generación de informes."
+ * )
+ */
 class ReportsController extends Controller
 {
+    /**
+     * Aplica filtros de fecha a una consulta.
+     *
+     * @param  \Illuminate\Database\Eloquent\Builder  $query
+     * @param  string  $startDate
+     * @param  string  $endDate
+     * @param  string  $dateField
+     * @return \Illuminate\Database\Eloquent\Builder
+     */
     private function applyDateFilters($query, $startDate, $endDate, $dateField = 'fecha_hora')
     {
         return $query->whereBetween($dateField, [$startDate, $endDate]);
     }
 
+    /**
+     * Aplica filtros de tipo a una consulta.
+     *
+     * @param  \Illuminate\Database\Eloquent\Builder  $query
+     * @param  string  $type
+     * @param  bool  $isIncoming
+     * @return \Illuminate\Database\Eloquent\Builder
+     */
     private function applyTypeFilter($query, $type, $isIncoming)
     {
         $relation = $isIncoming ? 'entrante' : 'saliente';
@@ -29,6 +50,14 @@ class ReportsController extends Controller
         });
     }
 
+    /**
+     * Genera un PDF a partir de una vista y datos.
+     *
+     * @param  string  $view
+     * @param  array  $data
+     * @param  string  $filename
+     * @return \Symfony\Component\HttpFoundation\Response
+     */
     private function generatePdf($view, $data, $filename)
     {
         $dompdf = new Dompdf();
@@ -47,6 +76,40 @@ class ReportsController extends Controller
         return $response;
     }
 
+    /**
+     * Genera un informe de emergencias.
+     *
+     * @OA\Get(
+     *     path="/api/reports/emergencies",
+     *     summary="Genera un informe de emergencias",
+     *     description="Genera un informe de emergencias filtrado por fecha y zona.",
+     *     tags={"Reports"},
+     *     @OA\Parameter(
+     *         name="startDate",
+     *         in="query",
+     *         description="Fecha de inicio para el filtro.",
+     *         @OA\Schema(type="string", format="date")
+     *     ),
+     *     @OA\Parameter(
+     *         name="endDate",
+     *         in="query",
+     *         description="Fecha de fin para el filtro.",
+     *         @OA\Schema(type="string", format="date")
+     *     ),
+     *     @OA\Parameter(
+     *         name="zona",
+     *         in="query",
+     *         description="ID de la zona para el filtro.",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Informe generado exitosamente."
+     *     )
+     * )
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Symfony\Component\HttpFoundation\Response
+     */
     public function getEmergencies(Request $request)
     {
         $startDate = $request->query('startDate') ? Carbon::parse($request->query('startDate'))->startOfDay() : Carbon::now()->startOfYear();
@@ -70,6 +133,40 @@ class ReportsController extends Controller
         return $this->generatePdf('reports.emergencies', $data, 'emergencies_report.pdf');
     }
 
+    /**
+     * Genera un informe de acciones sociales.
+     *
+     * @OA\Get(
+     *     path="/api/reports/socials",
+     *     summary="Genera un informe de acciones sociales",
+     *     description="Genera un informe de acciones sociales filtrado por fecha y tipo.",
+     *     tags={"Reports"},
+     *     @OA\Parameter(
+     *         name="startDate",
+     *         in="query",
+     *         description="Fecha de inicio para el filtro.",
+     *         @OA\Schema(type="string", format="date")
+     *     ),
+     *     @OA\Parameter(
+     *         name="endDate",
+     *         in="query",
+     *         description="Fecha de fin para el filtro.",
+     *         @OA\Schema(type="string", format="date")
+     *     ),
+     *     @OA\Parameter(
+     *         name="sentido",
+     *         in="query",
+     *         description="Tipo de acción social para el filtro.",
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Informe generado exitosamente."
+     *     )
+     * )
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Symfony\Component\HttpFoundation\Response
+     */
     public function getSocials(Request $request)
     {
         $startDate = $request->query('startDate') ? Carbon::parse($request->query('startDate'))->startOfDay() : Carbon::now()->startOfYear();
@@ -87,6 +184,73 @@ class ReportsController extends Controller
         return $this->generatePdf('reports.socials', $data, 'socials_report.pdf');
     }
 
+    /**
+     * Genera un informe de monitorizaciones.
+     *
+     *  @OA\Get(
+     *     path="/api/reports/monitorings",
+     *     summary="Genera un informe de monitorizaciones",
+     *     description="Genera un informe de monitorizaciones filtrado por fecha y tipo.",
+     *     tags={"Reports"},
+     *     @OA\Parameter(
+     *         name="startDate",
+     *         in="query",
+     *         description="Fecha de inicio para el filtro.",
+     *         @OA\Schema(type="string", format="date")
+     *     ),
+     *     @OA\Parameter(
+     *         name="endDate",
+     *         in="query",
+     *         description="Fecha de fin para el filtro.",
+     *         @OA\Schema(type="string", format="date")
+     *     ),
+     *     @OA\Parameter(
+     *         name="sentido",
+     *         in="query",
+     *         description="Tipo de monitorización para el filtro.",
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Informe generado exitosamente."
+     *     )
+     * )
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Symfony\Component\HttpFoundation\Response
+     */
+    public function getMonitorings(Request $request)
+    {
+        $startDate = $request->query('startDate') ? Carbon::parse($request->query('startDate'))->startOfDay() : Carbon::now()->startOfYear();
+        $endDate = $request->query('endDate') ? Carbon::parse($request->query('endDate'))->endOfDay() : Carbon::now()->endOfYear();
+        $type = $request->query('sentido');
+
+        $callsQuery = Call::query();
+        $callsQuery = $this->applyDateFilters($callsQuery, $startDate, $endDate);
+        if ($type) {
+            $callsQuery = $this->applyTypeFilter($callsQuery, $type, false);
+        }
+        $calls = $callsQuery->get();
+
+        $data = compact('calls', 'startDate', 'endDate');
+        return $this->generatePdf('reports.monitoring', $data, 'monitoring_report.pdf');
+    }
+
+    /**
+     * Genera un informe de todos los pacientes, ordenados alfabéticamente por apellido.
+     *
+     *  @OA\Get(
+     *     path="/api/reports/patients",
+     *     summary="Genera un informe de todos los pacientes",
+     *     description="Genera un informe de todos los pacientes, ordenados alfabéticamente por apellido.",
+     *     tags={"Reports"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Informe generado exitosamente."
+     *     )
+     * )
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Symfony\Component\HttpFoundation\Response
+     */
     public function getAllPatients(Request $request)
     {
         $patients = Patient::query()
@@ -97,6 +261,47 @@ class ReportsController extends Controller
         return $this->generatePdf('reports.patients', $data, 'patients_report.pdf');
     }
 
+    /**
+     * Genera un informe del historial de un paciente.
+     *
+     *  @OA\Get(
+     *     path="/api/reports/patient_history/{id}",
+     *     summary="Genera un informe del historial de un paciente",
+     *     description="Genera un informe del historial de un paciente filtrado por fecha y tipo.",
+     *     tags={"Reports"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID del paciente.",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         name="startDate",
+     *         in="query",
+     *         description="Fecha de inicio para el filtro.",
+     *         @OA\Schema(type="string", format="date")
+     *     ),
+     *     @OA\Parameter(
+     *         name="endDate",
+     *         in="query",
+     *         description="Fecha de fin para el filtro.",
+     *         @OA\Schema(type="string", format="date")
+     *     ),
+     *     @OA\Parameter(
+     *         name="sentido",
+     *         in="query",
+     *         description="Tipo de acción para el filtro.",
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Informe generado exitosamente."
+     *     )
+     * )
+     * @param  \Illuminate\Http\Request  $request
+     * @param  int  $id
+     * @return \Symfony\Component\HttpFoundation\Response
+     */
     public function getPatientHistory(Request $request, $id)
     {
         $startDate = $request->query('startDate') ? Carbon::parse($request->query('startDate'))->startOfDay() : Carbon::now()->startOfYear();
@@ -115,6 +320,42 @@ class ReportsController extends Controller
         return $this->generatePdf('reports.patient_history', $data, 'patient_history_report.pdf');
     }
 
+    /**
+     * Genera un informe de acciones de emergencia por zona.
+     *
+     * @OA\Get(
+     *     path="/api/reports/emergency-actions-by-zone/{zoneId}",
+     *     summary="Genera un informe de acciones de emergencia por zona",
+     *     description="Genera un informe de acciones de emergencia por zona filtrado por fecha.",
+     *     tags={"Reports"},
+     *     @OA\Parameter(
+     *         name="zoneId",
+     *         in="path",
+     *         description="ID de la zona.",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         name="startDate",
+     *         in="query",
+     *         description="Fecha de inicio para el filtro.",
+     *         @OA\Schema(type="string", format="date")
+     *     ),
+     *     @OA\Parameter(
+     *         name="endDate",
+     *         in="query",
+     *         description="Fecha de fin para el filtro.",
+     *         @OA\Schema(type="string", format="date")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Informe generado exitosamente."
+     *     )
+     * )
+     * @param  \Illuminate\Http\Request  $request
+     * @param  int  $zoneId
+     * @return \Symfony\Component\HttpFoundation\Response
+     */
     public function getEmergencyActionsByZone(Request $request, $zoneId)
     {
         $startDate = $request->query('startDate') ? Carbon::parse($request->query('startDate'))->startOfDay() : Carbon::now()->startOfYear();
@@ -132,6 +373,22 @@ class ReportsController extends Controller
         return $this->generatePdf('reports.emergency_actions_by_zone', $data, 'emergency_actions_by_zone_report.pdf');
     }
 
+    /**
+     * Genera un listado de pacientes.
+     *
+     * @OA\Get(
+     *     path="/api/reports/patients-list",
+     *     summary="Genera un listado de pacientes",
+     *     description="Genera un listado de pacientes ordenados por apellido.",
+     *     tags={"Reports"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Listado generado exitosamente."
+     *     )
+     * )
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Symfony\Component\HttpFoundation\Response
+     */
     public function getPatientsList(Request $request)
     {
         $patients = Patient::orderBy('apellidos')->get();
@@ -140,6 +397,34 @@ class ReportsController extends Controller
         return $this->generatePdf('reports.patients_list', $data, 'patients_list_report.pdf');
     }
 
+    /**
+     * Genera un informe de llamadas programadas.
+     *
+     * @OA\Get(
+     *     path="/api/reports/scheduled-calls",
+     *     summary="Genera un informe de llamadas programadas",
+     *     description="Genera un informe de llamadas programadas filtrado por zona y fecha.",
+     *     tags={"Reports"},
+     *     @OA\Parameter(
+     *         name="zona",
+     *         in="query",
+     *         description="ID de la zona para el filtro.",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         name="fecha",
+     *         in="query",
+     *         description="Fecha para el filtro.",
+     *         @OA\Schema(type="string", format="date")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Informe generado exitosamente."
+     *     )
+     * )
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Symfony\Component\HttpFoundation\Response
+     */
     public function getScheduledCalls(Request $request)
     {
         $zona_id = $request->query('zona') ?: null;
@@ -148,7 +433,6 @@ class ReportsController extends Controller
 
         $callsQuery = Call::query();
 
-        // dd($fecha);
         if($fecha != '1800-01-01'){
             $callsQuery->where('fecha_hora', '>=', $fecha);
         }
@@ -163,6 +447,36 @@ class ReportsController extends Controller
         return $this->generatePdf('reports.scheduled_calls', $data, 'scheduled_calls_report.pdf');
     }
 
+    /**
+     * Genera un informe del historial de llamadas de un paciente por tipo.
+     *
+     * @OA\Get(
+     *     path="/api/reports/call-history-by-patient-and-type/{patientId}",
+     *     summary="Genera un informe del historial de llamadas de un paciente por tipo",
+     *     description="Genera un informe del historial de llamadas de un paciente por tipo.",
+     *     tags={"Reports"},
+     *     @OA\Parameter(
+     *         name="patientId",
+     *         in="path",
+     *         description="ID del paciente.",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         name="tipo",
+     *         in="query",
+     *         description="Tipo de llamada para el filtro.",
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Informe generado exitosamente."
+     *     )
+     * )
+     * @param  \Illuminate\Http\Request  $request
+     * @param  int  $patientId
+     * @return \Symfony\Component\HttpFoundation\Response
+     */
     public function getCallHistoryByPatientAndType(Request $request, $patientId)
     {
         $type = $request->query('tipo') ?: null;
@@ -170,7 +484,7 @@ class ReportsController extends Controller
         $callsQuery = Call::where('paciente_id', $patientId);
 
         if ($type) {
-            $callsQuery->where('categoria', $type); 
+            $callsQuery->where('categoria', $type);
         }
 
         $calls = $callsQuery->get();
